set(COMPONENT_NAME ${PROJECT_NAME}_matching_engine)

#------------------------------------------------------------------------------#

add_static_library(
  NAME ${COMPONENT_NAME}
  ALIAS ts::matching_engine
  HEADERS
    ih/commands/client_notification_cache.hpp
    ih/commands/commands.hpp
    ih/common/abstractions/event_listener.hpp
    ih/common/abstractions/market_data_request_processor.hpp
    ih/common/abstractions/market_data_publisher.hpp
    ih/common/abstractions/order_event_handler.hpp
    ih/common/abstractions/order_request_processor.hpp
    ih/common/data/market_data_updates.hpp
    ih/common/events/client_notification.hpp
    ih/common/events/event.hpp
    ih/common/events/event_reporter.hpp
    ih/common/events/order_book_notification.hpp
    ih/common/validation/checker_utils.hpp
    ih/common/validation/conclusion.hpp
    ih/common/validation/validation.hpp
    ih/dispatching/event_dispatcher.hpp
    ih/market_data/actions/market_data_recover.hpp
    ih/market_data/cache/cache_manager.hpp
    ih/market_data/cache/depth_cache.hpp
    ih/market_data/cache/instrument_info_cache.hpp
    ih/market_data/cache/trade_cache.hpp
    ih/market_data/cache/market_data_provider.hpp
    ih/market_data/depth/depth_level.hpp
    ih/market_data/depth/depth_node.hpp
    ih/market_data/depth/depth_node_comparator.hpp
    ih/market_data/depth/depth_quantity_list.hpp
    ih/market_data/depth/depth_sheet.hpp
    ih/market_data/depth/depth_record.hpp
    ih/market_data/depth/depth_stats_reader.hpp
    ih/market_data/depth/full_depth_update.hpp
    ih/market_data/depth/incremental_depth_update.hpp
    ih/market_data/subscriptions/subscription.hpp
    ih/market_data/subscriptions/subscription_manager.hpp
    ih/market_data/tools/algorithms.hpp
    ih/market_data/tools/instrument_px.hpp
    ih/market_data/tools/market_entry_id_generator.hpp
    ih/market_data/tools/notification_creators.hpp
    ih/market_data/validation/checkers.hpp
    ih/market_data/validation/errors.hpp
    ih/market_data/validation/market_data_validator.hpp
    ih/market_data/validation/validator.hpp
    ih/market_data/market_data_facade.hpp
    ih/market_data/streaming_settings.hpp
    ih/orders/actions/cancellation.hpp
    ih/orders/actions/elimination.hpp
    ih/orders/actions/limit_order_recover.hpp
    ih/orders/actions/order_action_handler.hpp
    ih/orders/actions/regular_amendment.hpp
    ih/orders/actions/regular_order_action_processor.hpp
    ih/orders/actions/regular_placement.hpp
    ih/orders/book/limit_order.hpp
    ih/orders/book/market_order.hpp
    ih/orders/book/order_algorithms.hpp
    ih/orders/book/order_book.hpp
    ih/orders/book/order_metadata.hpp
    ih/orders/book/order_updates.hpp
    ih/orders/matchers/order_matcher.hpp
    ih/orders/matchers/regular_order_matcher.hpp
    ih/orders/replies/cancellation_reply_builders.hpp
    ih/orders/replies/client_reject_reporter.hpp
    ih/orders/replies/execution_reply_builders.hpp
    ih/orders/replies/modification_reply_builders.hpp
    ih/orders/replies/placement_reply_builders.hpp
    ih/orders/replies/reject_notifier.hpp
    ih/orders/requests/interpretation.hpp
    ih/orders/tools/exec_id_generator.hpp
    ih/orders/tools/id_conversion.hpp
    ih/orders/tools/notification_creators.hpp
    ih/orders/tools/order_book_state_converter.hpp
    ih/orders/tools/order_id_generator.hpp
    ih/orders/tools/order_lookup.hpp
    ih/orders/validation/checkers.hpp
    ih/orders/validation/client_request_validator.hpp
    ih/orders/validation/errors.hpp
    ih/orders/validation/order_book_side.hpp
    ih/orders/validation/validator.hpp
    ih/orders/order_system_facade.hpp
    ih/orders/phase_handler.hpp
    ih/implementation.hpp
    include/matching_engine/configuration.hpp
    include/matching_engine/matching_engine.hpp
  SOURCES
    src/commands/client_notification_cache.cpp
    src/commands/commands.cpp
    src/dispatching/event_dispatcher.cpp
    src/market_data/actions/market_data_recover.cpp
    src/market_data/cache/cache_manager.cpp
    src/market_data/cache/depth_cache.cpp
    src/market_data/cache/instrument_info_cache.cpp
    src/market_data/cache/trade_cache.cpp
    src/market_data/depth/depth_node.cpp
    src/market_data/depth/depth_quantity_list.cpp
    src/market_data/depth/depth_sheet.cpp
    src/market_data/depth/full_depth_update.cpp
    src/market_data/depth/incremental_depth_update.cpp
    src/market_data/subscriptions/subscription.cpp
    src/market_data/subscriptions/subscription_manager.cpp
    src/market_data/tools/market_entry_id_generator.cpp
    src/market_data/validation/checkers.cpp
    src/market_data/validation/market_data_validator.cpp
    src/market_data/market_data_facade.cpp
    src/orders/actions/cancellation.cpp
    src/orders/actions/elimination.cpp
    src/orders/actions/limit_order_recover.cpp
    src/orders/actions/regular_amendment.cpp
    src/orders/actions/regular_order_action_processor.cpp
    src/orders/actions/regular_placement.cpp
    src/orders/book/order_book.cpp
    src/orders/book/orders.cpp
    src/orders/matchers/regular_order_matcher.cpp
    src/orders/replies/client_reject_reporter.cpp
    src/orders/replies/reply_builders.cpp
    src/orders/requests/interpretation.cpp
    src/orders/tools/exec_id_generator.cpp
    src/orders/tools/id_conversion.cpp
    src/orders/tools/notification_creators.cpp
    src/orders/tools/order_book_state_converter.cpp
    src/orders/tools/order_id_generator.cpp
    src/orders/tools/order_lookup.cpp
    src/orders/validation/checkers.cpp
    src/orders/validation/client_request_validator.cpp
    src/orders/order_system_facade.cpp
    src/orders/phase_handler.cpp
    src/implementation.cpp
    src/matching_engine.cpp
  PUBLIC_INCLUDE_DIRECTORIES
    ${CMAKE_CURRENT_SOURCE_DIR}/include
  PRIVATE_INCLUDE_DIRECTORIES
    ${CMAKE_CURRENT_SOURCE_DIR}
  PUBLIC_DEPENDENCIES
    ts::common
    ts::instruments
    ts::runtime
    simulator::protocol
    simulator::core
  PRIVATE_DEPENDENCIES
    ts::idgen
    simulator::middleware
    simulator::log
    fmt::fmt
    nonstd::expected-lite
    Microsoft.GSL::GSL)

#------------------------------------------------------------------------------#

add_subdirectory(tests)